--- a/public/index.html
+++ b/public/index.html
@@ -16,6 +16,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+    <script src="https://static.sketchfab.com/js/sketchfab-viewer-1.12.1.js"></script>
     <title>Flannery Training App</title>
   </head>
   <body>
